Added Resnet to wpa_supplicant.conf booyah

--- a/wpa_supplicant.conf
+++ b/wpa_supplicant.conf
@@ -39,3 +39,19 @@ network={
 	phase2="auth=MSCHAPV2"
 }
 
+# Resnet at Burgmann College = initial digging using ifconfig shows it's the same setup as ANU-Secure
+
+network={
+	ssid="Resnet"
+	priority=2
+	proto=RSN
+	key_mgmt=WPA-EAP
+	pairwise=CCMP
+	auth_alg=OPEN
+	eap=PEAP
+	identity="u6933485@anu.edu.au"
+	password=hash:928d687c18be85737ae1023ebb2f4f8e
+	phase1="peaplabel=0"
+	phase2="auth=MSCHAPV2"
+}
+
